--- a/programs.html
+++ b/programs.html
@@ -3,37 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Programs | Edoror Judy Empowerment Foundation – Transforming Lives Across Nigeria</title>
+  <title>Edoror Judy Poverty Eradication & Empowerment Foundation | Empowering Lives in Nigeria</title>
 
-  <meta name="description" content="Explore the impactful programs by Edoror Judy Empowerment Foundation (EJPEEF) focused on poverty eradication, youth empowerment, women training, and community development in Nigeria." />
-  <meta name="keywords" content="EJPEEF programs, poverty eradication, empowerment projects, NGO in Nigeria, women empowerment, youth training, community development, education support" />
+  <!-- Meta Description -->
+  <meta name="description" content="Edoror Judy Poverty Eradication and Empowerment Foundation (EJPEEF) is dedicated to eradicating poverty, empowering women, and improving lives through education, training, and community development programs in Nigeria." />
+
+  <!-- Keywords -->
+  <meta name="keywords" content="poverty eradication, empowerment foundation, Edoror Judy Foundation, EJPEEF, NGO Nigeria, women empowerment, youth development, skill acquisition, charity organization" />
+
+  <!-- Author -->
   <meta name="author" content="Edoror Judy Empowerment Foundation" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://edororjudyfoundation.org/programs.html" />
-  <meta property="og:title" content="Our Programs | Edoror Judy Empowerment Foundation" />
-  <meta property="og:description" content="Discover how EJPEEF is empowering communities through education, training, and sustainable development projects across Nigeria." />
-  <meta property="og:image" content="images/logo.png" />
+  <meta property="og:url" content="https://edororjudyfoundation.org/" />
+  <meta property="og:title" content="Edoror Judy Empowerment Foundation | Changing Lives Through Empowerment" />
+  <meta property="og:description" content="Join Edoror Judy Empowerment Foundation in the fight against poverty and in empowering communities across Nigeria." />
+  <meta property="og:image" content="assets/images/jed-logo.png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://edororjudyfoundation.org/programs.html" />
-  <meta name="twitter:title" content="Our Programs | Edoror Judy Empowerment Foundation" />
-  <meta name="twitter:description" content="Empowering lives through sustainable development, education, and poverty eradication initiatives." />
-  <meta name="twitter:image" content="images/logo.png" />
+  <meta name="twitter:url" content="https://edororjudyfoundation.org/" />
+  <meta name="twitter:title" content="Edoror Judy Empowerment Foundation" />
+  <meta name="twitter:description" content="Eradicating poverty and empowering lives across Nigeria through sustainable development." />
+  <meta name="twitter:image" content="assets/images/jed-logo.png" />
 
-  <!-- Favicon & Fonts -->
-  <link rel="icon" href="images/logo.png" type="image/png" />
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Stylesheet -->
+
+<!-- ✅ Working Font Awesome 6.6.0 -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/all.min.css">
+
+
+  <!-- Styles -->
   <link rel="stylesheet" href="css/style.css" />
 
   <!-- SEO Enhancements -->
-  <link rel="canonical" href="https://edororjudyfoundation.org/programs.html" />
+  <link rel="canonical" href="https://edororjudyfoundation.org/" />
   <meta name="robots" content="index, follow" />
+
+  <!-- Theme Color for Mobile -->
   <meta name="theme-color" content="#ffcc00" />
+
+
 </head>
 
 <body>
@@ -43,7 +56,7 @@
     <nav class="navbar">
   <div class="logo">
     <a href="index.html">
-      <img src="assets/images/jed-logo.png" alt="Jed Foundation Logo">
+      <img src="assets/images/logo_f.jpg" alt="Jed Foundation Logo">
     </a>
   </div>
 
@@ -110,40 +123,60 @@
   </section>
 
   <!-- === FOOTER === -->
- <footer>
-    <div class="footer-container">
-      <div class="footer-logo">
-        <img src="assets/images/jed-logo.png" alt="Jed Foundation Logo" />
-        <p>Building a brighter, empowered future for every Nigerian.</p>
-      </div>
-      <div class="footer-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="programs.html">Programs</a>
-        <a href="contact.html">Contact</a>
-      </div>
-      <div class="footer-social">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-x-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+ 
+<!-- === FOOTER SECTION === -->
+<footer class="footer">
+  <div class="footer-container">
+    
+    <!-- Logo & Mission -->
+    <div class="footer-about">
+      <img src="assets/images/logo_f.jpg" alt="EJPEEF Logo" class="footer-logo">
+      <p>
+        <strong>Edoror Judy Poverty Eradication & Empowerment Foundation (EJPEEF)</strong> is committed to empowering lives, eradicating poverty, and creating lasting opportunities across communities.
+      </p>
+    </div>
+
+    <!-- Quick Links -->
+    <div class="footer-nav">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
+        <li><a href="programs.html"><i class="fas fa-hands-helping"></i> Programs</a></li>
+        <li><a href="blog.html"><i class="fas fa-blog"></i> Blog</a></li>
+        <li><a href="donate.html"><i class="fas fa-donate"></i> Donate</a></li>
+        <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Social Media -->
+    <div class="footer-social">
+      <h4>Connect With Us</h4>
+      <div class="social-icons">
+        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
+        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
 
+  </div>
 
+  <!-- Legal Info -->
+  <div class="footer-legal">
+    <p>
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="terms.html">Terms of Use</a> |
+      <a href="cookies.html">Cookies Policy</a>
+    </p>
+    <p>RC-8902095 | #44, Osimen Street, Emaudo Ekpoma, Nigeria</p>
+  </div>
 
-    <div class="footer-legal">
-  <p>
-    <a href="privacy.html">Privacy Policy</a> |
-    <a href="terms.html">Terms of Use</a> |
-    <a href="cookies.html">Cookies Policy</a>
-  </p>
-  <p>Registered NGO No: RC/EDJ/2025/8902095</p>
-  <p> 22 Emaoudo Quarter Ekpoma</p>
-</div>
-
-    <p class="copyright">© 2025 Edoror Judy Povert Eradication and Empowerment Foundation. All rights reserved.</p>
-  </footer>
+  <!-- Copyright -->
+  <div class="footer-bottom">
+    <p>© 2025 Edoror Judy Poverty Eradication and Empowerment Foundation. All rights reserved.</p>
+  </div>
+</footer>
   <!-- === SCRIPTS === -->
   <script src="js/main.js"></script>
   <script>
