--- a/donate.html
+++ b/donate.html
@@ -23,6 +23,12 @@
   <link rel="icon" href="assets/images/jed-logo.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  
+  <!-- ✅ Working Font Awesome 6.6.0 -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/all.min.css">
+
+  
+  
   <link rel="stylesheet" href="css/donate.css" />
 
   <!-- Font Awesome -->
@@ -40,7 +46,7 @@
     <nav class="navbar">
   <div class="logo">
     <a href="index.html">
-      <img src="assets/images/jed-logo.png" alt="Jed Foundation Logo">
+      <img src="assets/images/logo_f.jpg" alt="Jed Foundation Logo">
     </a>
   </div>
 
@@ -55,7 +61,8 @@
     <li><a href="about.html">About</a></li>
     <li><a href="programs.html">Programs</a></li>
     <li><a href="blog.html">Blog</a></li>
-    <li><a href="donate.html">Donate</a></li>
+    <li><a href="donate.html" class="cta-btn">Donate</a></li>
+
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
@@ -65,15 +72,14 @@
   
 
 
-  <!-- === HERO SECTION === -->
-  <section class="hero">
-    <img src="assets/images/jed-logo.png" alt="Hero Background" class="hero-bg">
-    <div class="hero-content">
-      <h1>Empower Lives, Build Futures</h1>
-      <p>Your contribution transforms lives across Nigeria.</p>
-      <a href="#donation" class="cta-btn">Donate Now</a>
-    </div>
-  </section>
+ <!-- === HERO SECTION === -->
+<section class="hero text-hero">
+  <div class="hero-content">
+    <h1 id="animated-text"></h1>
+    <p>Your contribution transforms lives across Nigeria.</p>
+    <a href="#donation" class="cta-btn">Donate Now</a>
+  </div>
+</section>
 
   <!-- === DONATION SECTION === -->
   <section id="donation" class="donate">
@@ -131,41 +137,61 @@
     </div>
   </section>
 
-<!-- === FOOTER === -->
-  <footer>
-    <div class="footer-container">
-      <div class="footer-logo">
-        <img src="assets/images/jed-logo.png" alt="Edoror Judy Foundation Logo" />
-        <p>Building a brighter, empowered future for every Nigerian.</p>
-      </div>
-      <div class="footer-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="programs.html">Programs</a>
-        <a href="contact.html">Contact</a>
-      </div>
-      <div class="footer-social">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-    </div>
 
-    <div class="footer-legal">
+  
+<!-- === FOOTER SECTION === -->
+<footer class="footer">
+  <div class="footer-container">
+    
+    <!-- Logo & Mission -->
+    <div class="footer-about">
+      <img src="assets/images/logo_f.jpg" alt="EJPEEF Logo" class="footer-logo">
       <p>
-        <a href="privacy.html">Privacy Policy</a> |
-        <a href="terms.html">Terms of Use</a> |
-        <a href="cookies.html">Cookies Policy</a>
+        <strong>Edoror Judy Poverty Eradication & Empowerment Foundation (EJPEEF)</strong> is committed to empowering lives, eradicating poverty, and creating lasting opportunities across communities.
       </p>
-      <p>Registered NGO No: RC/EDJ/2025/8902095</p>
-      <p>22 Emaoudo Quarter Ekpoma</p>
     </div>
 
-    <p class="copyright">© 2025 Edoror Judy Poverty Eradication and Empowerment Foundation. All rights reserved.</p>
-  </footer>
+    <!-- Quick Links -->
+    <div class="footer-nav">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
+        <li><a href="programs.html"><i class="fas fa-hands-helping"></i> Programs</a></li>
+        <li><a href="blog.html"><i class="fas fa-blog"></i> Blog</a></li>
+        <li><a href="donate.html"><i class="fas fa-donate"></i> Donate</a></li>
+        <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+      </ul>
+    </div>
 
+    <!-- Social Media -->
+    <div class="footer-social">
+      <h4>Connect With Us</h4>
+      <div class="social-icons">
+        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
+        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+    </div>
 
+  </div>
+
+  <!-- Legal Info -->
+  <div class="footer-legal">
+    <p>
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="terms.html">Terms of Use</a> |
+      <a href="cookies.html">Cookies Policy</a>
+    </p>
+    <p>RC-8902095 | #44, Osimen Street, Emaudo Ekpoma, Nigeria</p>
+  </div>
+
+  <!-- Copyright -->
+  <div class="footer-bottom">
+    <p>© 2025 Edoror Judy Poverty Eradication and Empowerment Foundation. All rights reserved.</p>
+  </div>
+</footer>
 
 
   <!-- === BACK TO TOP BUTTON === -->
@@ -174,5 +200,42 @@
   <!-- === SCRIPTS === -->
   <script src="https://js.paystack.co/v1/inline.js"></script>
   <script src="js/donate.js" defer></script>
+
+  <script>
+  const textElement = document.getElementById("animated-text");
+  const texts = [
+    "Empower Lives, Build Futures",
+    "Together, We Eradicate Poverty",
+    "Changing Lives Across Nigeria"
+  ];
+  let index = 0;
+  let charIndex = 0;
+  let currentText = "";
+  let isDeleting = false;
+
+  function type() {
+    currentText = texts[index];
+    if (isDeleting) {
+      textElement.textContent = currentText.substring(0, charIndex--);
+    } else {
+      textElement.textContent = currentText.substring(0, charIndex++);
+    }
+
+    let typeSpeed = isDeleting ? 50 : 100;
+
+    if (!isDeleting && charIndex === currentText.length) {
+      typeSpeed = 2000;
+      isDeleting = true;
+    } else if (isDeleting && charIndex === 0) {
+      isDeleting = false;
+      index = (index + 1) % texts.length;
+    }
+
+    setTimeout(type, typeSpeed);
+  }
+
+  type();
+</script>
+
 </body>
 </html>
