--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
     <nav class="navbar">
   <div class="logo">
     <a href="index.html">
-      <img src="assets/images/logo_f.jpg" alt="Jed Foundation Logo">
+      <img src="assets/images/logo_use.png" alt="Jed Foundation Logo">
     </a>
   </div>
 
@@ -112,7 +112,7 @@
     
     <!-- Logo & Mission -->
     <div class="footer-about">
-      <img src="assets/images/logo_f.jpg" alt="EJPEEF Logo" class="footer-logo">
+      <img src="assets/images/logo_use.png" alt="EJPEEF Logo" class="footer-logo">
       <p>
         <strong>Edoror Judy Poverty Eradication & Empowerment Foundation (EJPEEF)</strong> is committed to empowering lives, eradicating poverty, and creating lasting opportunities across communities.
       </p>
@@ -130,17 +130,27 @@
         <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
       </ul>
     </div>
-
-    <!-- Social Media -->
-    <div class="footer-social">
-      <h4>Connect With Us</h4>
-      <div class="social-icons">
-        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
-        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-      </div>
     </div>
+
+   <!-- Social Media -->
+<div class="footer-social">
+  <h4>Connect With Us</h4>
+  <div class="social-icons">
+    <a href="https://www.facebook.com/profile.php?id=61581976896972&mibextid=ZbWKwL" aria-label="Facebook">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://www.instagram.com/judyempowermentfoundation?igsh=MWZydjZtYXk1YzZnbA==" aria-label="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="#" aria-label="Twitter">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a href="#" aria-label="LinkedIn">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
+  </div>
+</div>
+
 
   </div>
 
