Updated footer design, fixed cookie banner visibility, and added new images

--- a/about.html
+++ b/about.html
@@ -116,17 +116,17 @@
     <hr class="section-line">
     <div class="team-grid">
       <div class="team-card">
-        <img src="assets/images/team-member1.jpg" alt="Team Member">
+        <img src="assets/images/Mr._edoror.jpg" alt="Team Member">
         <h4>Mr. Edoror Osamudiamen</h4>
         <p>Founder & CEO</p>
       </div>
       <div class="team-card">
-        <img src="assets/images/team-member2.jpg" alt="Team Member">
-        <h4>Mrs. Judy Osamudiamen</h4>
+        <img src="assets/images/Mrs_edoro.jpg" alt="Team Member">
+        <h4>Mrs. Edoro Judy Nwaneka</h4>
         <p>Lead, Women's Outreach</p>
       </div>
       <div class="team-card">
-        <img src="assets/images/team-member3.jpg" alt="Team Member">
+        <img src="assets/images/Mejp.jfif" alt="Team Member">
         <h4>Engr. Augustine Omonkaro S </h4>
         <p>Head, IT Unit</p>
       </div>
@@ -160,7 +160,7 @@
       </ul>
     </div>
 
-  <!-- Social Media -->
+<!-- Social Media -->
 <div class="footer-social">
   <h4>Connect With Us</h4>
   <div class="social-icons">
@@ -170,14 +170,12 @@
     <a href="https://www.instagram.com/judyempowermentfoundation?igsh=MWZydjZtYXk1YzZnbA==" aria-label="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="#" aria-label="Twitter">
-      <i class="fab fa-twitter"></i>
-    </a>
-    <a href="#" aria-label="LinkedIn">
-      <i class="fab fa-linkedin-in"></i>
+    <a href="https://x.com/judyempowermentfoundation" aria-label="X (formerly Twitter)">
+      <i class="fab fa-x-twitter"></i>
     </a>
   </div>
 </div>
+
 
 
   <!-- Legal Info -->
