--- a/blog.html
+++ b/blog.html
@@ -132,7 +132,7 @@
     </div>
     </div>
 
-   <!-- Social Media -->
+<!-- Social Media -->
 <div class="footer-social">
   <h4>Connect With Us</h4>
   <div class="social-icons">
@@ -142,11 +142,8 @@
     <a href="https://www.instagram.com/judyempowermentfoundation?igsh=MWZydjZtYXk1YzZnbA==" aria-label="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="#" aria-label="Twitter">
-      <i class="fab fa-twitter"></i>
-    </a>
-    <a href="#" aria-label="LinkedIn">
-      <i class="fab fa-linkedin-in"></i>
+    <a href="https://x.com/judyempowermentfoundation" aria-label="X (formerly Twitter)">
+      <i class="fab fa-x-twitter"></i>
     </a>
   </div>
 </div>
