--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 
     <!-- Contact Info -->
     <div class="contact-info" style="margin-top: 40px; color: #333;">
-      <p><strong>Email:</strong> <a href="mailto:info@edororjudyfoundation.org">info@edororjudyfoundation.org</a></p>
+      <p><strong>Email:</strong> <a href="mailto:info@edororjudyempowermentfoundatio...">info@edororjudyempowermentfoundatio...</a></p>
       <p><strong>Phone:</strong> <a href="tel:+2347049691346">+2347049691346</a></p>
    
     </div>
@@ -134,7 +134,7 @@
       </ul>
     </div>
 
-   <!-- Social Media -->
+<!-- Social Media -->
 <div class="footer-social">
   <h4>Connect With Us</h4>
   <div class="social-icons">
@@ -144,11 +144,8 @@
     <a href="https://www.instagram.com/judyempowermentfoundation?igsh=MWZydjZtYXk1YzZnbA==" aria-label="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="#" aria-label="Twitter">
-      <i class="fab fa-twitter"></i>
-    </a>
-    <a href="#" aria-label="LinkedIn">
-      <i class="fab fa-linkedin-in"></i>
+    <a href="https://x.com/judyempowermentfoundation" aria-label="X (formerly Twitter)">
+      <i class="fab fa-x-twitter"></i>
     </a>
   </div>
 </div>
