--- a/programs.html
+++ b/programs.html
@@ -122,8 +122,7 @@
     </div>
   </section>
 
-  <!-- === FOOTER === -->
- 
+  
 <!-- === FOOTER SECTION === -->
 <footer class="footer">
   <div class="footer-container">
@@ -149,7 +148,7 @@
       </ul>
     </div>
 
-    <!-- Social Media -->
+ <!-- Social Media -->
 <div class="footer-social">
   <h4>Connect With Us</h4>
   <div class="social-icons">
@@ -159,11 +158,8 @@
     <a href="https://www.instagram.com/judyempowermentfoundation?igsh=MWZydjZtYXk1YzZnbA==" aria-label="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="#" aria-label="Twitter">
-      <i class="fab fa-twitter"></i>
-    </a>
-    <a href="#" aria-label="LinkedIn">
-      <i class="fab fa-linkedin-in"></i>
+    <a href="https://x.com/judyempowermentfoundation" aria-label="X (formerly Twitter)">
+      <i class="fab fa-x-twitter"></i>
     </a>
   </div>
 </div>
