Updated about section, footer styling, and Paystack live key integration

--- a/about.html
+++ b/about.html
@@ -81,6 +81,51 @@
     </div>
   </section>
 
+
+
+
+ <section class="about-founder">
+  <div class="founder-container">
+    <div class="founder-image">
+      <img src="assets/images/Mr._edoror.jpg" alt="Mr. Edoror Osemudiamen - Founder" />
+    </div>
+
+    <div class="founder-content">
+      <h2>About the Founder</h2>
+      <p>
+        My name is <strong>Mr. Edoror Osemudiamen</strong>, the CEO of <strong>Robleodom Investment Ltd</strong> and Founder of the 
+        <strong>Edoror Judy Poverty Eradication & Empowerment Foundation (EJPEEF)</strong>. 
+        I am an empowerment visionist — and because of my passion for community growth, I was appointed as the 
+        <strong>Anti-Poverty and Empowerment Program Director</strong> in Esan West Local Government Council of Edo State 
+        by <strong>Hon. Godsent Agboibo</strong>, the Chairman of the Council.
+      </p>
+
+      <p>
+        As Director, I successfully promoted initiatives such as the donation of educational materials, 
+        waste bins, vocational skills training, and other empowerment classes aimed at community development.
+      </p>
+
+      <p>
+        Our foundation’s mission is to <strong>break the cycle of poverty</strong> — not just by providing immediate relief, 
+        but by equipping vulnerable individuals and communities with the <strong>tools, skills, and resources</strong> 
+        needed for long-term independence and sustainable well-being.
+      </p>
+
+      <p>
+        Empowerment fosters self-confidence, personal growth, and accountability. Through this process, we create 
+        lasting, positive transformations that benefit individuals, organizations, and society as a whole.
+      </p>
+
+      <p>
+        We also provide a supportive framework for individuals with a spirit of giving — both within Nigeria and 
+        in the diaspora — to directly support their communities. 
+        <strong>Edoror Judy Poverty Eradication & Empowerment Foundation</strong> ensures that your donations or empowerment 
+        projects are delivered according to your intentions and directives.
+      </p>
+    </div>
+  </div>
+</section>
+
   <!-- === ABOUT SECTION === -->
   <section class="about-section">
     <div class="about-header">
@@ -117,12 +162,12 @@
     <div class="team-grid">
       <div class="team-card">
         <img src="assets/images/Mr._edoror.jpg" alt="Team Member">
-        <h4>Mr. Edoror Osamudiamen</h4>
+        <h4>Mr. Edoror Osemudiamen</h4>
         <p>Founder & CEO</p>
       </div>
       <div class="team-card">
         <img src="assets/images/Mrs_edoro.jpg" alt="Team Member">
-        <h4>Mrs. Edoro Judy Nwaneka</h4>
+        <h4>Mrs. Edoror Judy Nwaneka</h4>
         <p>Lead, Women's Outreach</p>
       </div>
       <div class="team-card">
